<resources>
    <string name="app_name">inviter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Event_Time">Time</string>
    <string name="Event_Title">Event Title</string>
    <string name="Event_Date">Date</string>
    <string name="Event_Description">note</string>
    <string name="ok">Set</string>
    <string name="cancel">Cancel</string>
    <string name="username_text">Username</string>
    <string name="login_password">Password</string>
    <string name="login_text">Login</string>
    <string name="login_register_text">Register Here!</string>
    <string name="login_forget_text">Forgot?</string>
    <string name="AppName">Include</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="first_name_text">First name</string>
    <string name="last_name_text">Last name</string>
    <string name="next_text">Next</string>
    <string name="email_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="messenger_button_text">Message</string>
    <string name="remove_button_text">Remove</string>
    <string name="Add_username_text">Add Username</string>
    <string name="My_contacts_Text">Contacts</string>
    <string-array name="Reminder_Options">
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>1 Day</item>
        <item>Custom</item>
    </string-array>
    <string-array name="Repeat_Options">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Weekdays</item>
        <item>Weekends</item>
        <item>Lol theres no way i can do this but open a calender for user to press</item>
    </string-array>
    <string-array name="Picture_Options">
        <item>New Photo</item>
        <item>Remove Photo</item>
    </string-array>
    <string-array name="EventInfo_Options">
        <item>Edit...</item>
        <item>Leave Event</item>
        <item>Change Admin (Admin)</item>
        <item>Delete Event (Admin)</item>
    </string-array>
    <string name="title_activity_make_event">MakeEvent</string>
    <string name="pin_message_text">Pin Message</string>
    <string name="copy_button">Copy</string>
    <string name="no_pin_message">There are no pinned messages</string>
    <string name="remove_pin_button_text">Unpinned</string>
    <string name="edit_event_button">Edit...</string>
    <string name="leave_event_button">Leave Event</string>
    <string name="edit_admin_button">Manage Admin</string>
    <string name="delete_event_button">Delete Event</string>
    <string name="no_chat_message">There doesn\'t seem to be any conversations here.</string>
    <string name="skip_text">Skip</string>
    <string name="Add_friend_text">Add Friend</string>
    <string name="unfriend_text">Remove Friend</string>
    <string name="no_promotion_message">There doesn\'t seem to be any promotions right now. Please check again later!</string>
    <string name="action_search">Search</string>

</resources>
